--- a/src/main/resources/assets/veille/lang/en_us.json
+++ b/src/main/resources/assets/veille/lang/en_us.json
@@ -1,4 +1,6 @@
 {
   "item.veille.cross" : "Cross",
+  "entity.veille.tree_demon" : "Tree Demon",
+  "item.veille.tree_demon_egg" : "Tree Demon Egg",
   "itemgroup.veille": "Veille group"
 }
