création de mobs mise en place des animation et des prealabe il reste les conditions de span du mob et de ca prise de degats selon par une arme precise

--- a/src/main/resources/assets/veille/lang/en_us.json
+++ b/src/main/resources/assets/veille/lang/en_us.json
@@ -2,5 +2,8 @@
   "item.veille.cross" : "Cross",
   "entity.veille.tree_demon" : "Tree Demon",
   "item.veille.tree_demon_egg" : "Tree Demon Egg",
-  "itemgroup.veille": "Veille group"
+  "itemgroup.veille": "Veille group",
+
+  "entity.veille.blocklor" : "Blocklor",
+  "entity.veille.blocklor_egg" : "Blocklor Egg"
 }
