ajout de tranlsation sur blockor egg and hitbox fix for blocklor

--- a/src/main/resources/assets/veille/lang/en_us.json
+++ b/src/main/resources/assets/veille/lang/en_us.json
@@ -2,6 +2,7 @@
   "item.veille.cross" : "Cross",
   "entity.veille.tree_demon" : "Tree Demon",
   "item.veille.tree_demon_egg" : "Tree Demon Egg",
+  "item.veille.blocklor_egg" : "Blocklor Egg",
   "itemgroup.veille": "Veille group",
 
   "entity.veille.blocklor" : "Blocklor",
